--- a/css/responsive.css
+++ b/css/responsive.css
@@ -72,7 +72,7 @@
   }
 }
 
-@@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) {
 
   #navbar nav a {
     display: none;
@@ -97,7 +97,7 @@
 
 @media only screen and (max-width: 495px) {
 
-  #logo h2 {
+    #logo h2 {
     visibility: hidden;
   }
 }
